samples/_failures_safe/1761507696_65cc80_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d2fd298f.c: In function ‘main’:
./samples/SAFE/__tmp_d2fd298f.c:170:17: error: expected ‘;’ at end of input
  170 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_d2fd298f.c:170:9: error: expected declaration or statement at end of input
  170 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_d2fd298f.c:170:9: error: expected declaration or statement at end of input
